<resources>
    <string name="app_name">Tích điểm đổi quà</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="manage_customer">Quản lý khách hàng</string>
    <string name="add_customer">Thêm khách hàng</string>
    <string name="search_customer">Tìm kiếm khách hàng</string>
    <string name="manage_reward">Quản lý quà</string>
    <string name="add_reward">Thêm quà</string>
    <string name="add_image">Add Image</string>
    <string name="notice">Thông báo</string>
    <string name="action_cancel">Hủy</string>
    <string name="action_ok">Đồng ý</string>
    <string name="name">Tên</string>
    <string name="customer_detail">Chi tiết khách hàng</string>
    <string name="customer_name">Tên khách hàng</string>
    <string name="customer_id">ID khách hàng</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="current_point">Số điểm đang có</string>
    <string name="total_point">Tổng điểm</string>
    <string name="accumulate_point">Tích điểm</string>
    <string name="redeem_point">Đổi điểm</string>
    <string name="view_history">Xem lịch sử</string>
    <string name="hint_convert_money_to_point">Quy đổi: 20.000đ = 1.0 point</string>
    <string name="value_point_convert_format">= %s point</string>
    <string name="transaction_history">Lịch sử giao dịch</string>
    <string name="choose_reward">Chọn quà</string>
    <string name="choose_quantity">Chọn số lượng</string>
    <string name="delete">Xóa</string>
    <string name="edit_customer">Sửa khách hàng</string>
    <string name="reward_id">ID quà</string>
    <string name="reward_name">Tên</string>
    <string name="reward_description">Mô tả</string>
    <string name="reward_point">Số điểm đổi</string>
    <string name="reward_used_quantity">Sử dụng</string>
    <string name="reward_detail">Chi tiết quà</string>
    <string name="update_quantity_reward">Cập nhật số lượng</string>
    <string name="recent_customer">Khách hàng gần đây</string>
    <string name="data_is_empty">Danh sách trống</string>
</resources>