<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/xuandq_dip_8">

        <ImageView
            android:id="@+id/ic_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xuandq_dip_8"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_line_bottomsheet" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ic_line"
            android:layout_marginHorizontal="@dimen/xuandq_dip_16"
            android:layout_marginTop="@dimen/xuandq_dip_16"
            android:text="@string/update_quantity_reward"
            style="@style/TextStyleSub1" />

        <View
            android:id="@+id/view_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            android:layout_marginTop="@dimen/xuandq_dip_12"
            android:background="@color/neutral_200"
            />

        <EditText
            android:id="@+id/edt_quantity"
            android:layout_width="match_parent"
            android:layout_height="@dimen/xuandq_dip_44"
            android:background="@drawable/bg_edt_text_area"
            android:paddingHorizontal="@dimen/xuandq_dip_12"
            style="@style/TextStyleBody2"
            android:inputType="numberSigned"
            android:layout_marginTop="@dimen/xuandq_dip_16"
            android:layout_marginHorizontal="@dimen/xuandq_dip_16"
            app:layout_constraintTop_toBottomOf="@id/view_line"/>

        <View
            android:id="@+id/view_line2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/xuandq_dip_16"
            app:layout_constraintTop_toBottomOf="@id/edt_quantity"
            android:background="@color/neutral_200"
            />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/action_cancel"
            android:background="@drawable/bg_primary_8"
            app:layout_constraintTop_toBottomOf="@id/view_line2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_ok"
            android:layout_marginStart="@dimen/xuandq_dip_16"
            android:layout_marginVertical="@dimen/xuandq_dip_8"
            />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/action_ok"
            android:background="@drawable/bg_primary_8"
            android:layout_marginStart="@dimen/xuandq_dip_16"
            app:layout_constraintTop_toTopOf="@id/btn_cancel"
            app:layout_constraintBottom_toBottomOf="@id/btn_cancel"
            app:layout_constraintStart_toEndOf="@id/btn_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/xuandq_dip_16"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>