<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.xuandq.facemaskdetection.ui.accumulate.AccumulatePointViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.accumulate.AccumulatePointFragment">

        <include
            android:id="@+id/toolbar"
            layout="@layout/layout_toolbar"
            app:title="@{@string/accumulate_point}" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_name_title"
                    style="@style/TextStyleBody2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/xuandq_dip_16"
                    android:layout_marginTop="@dimen/xuandq_dip_14"
                    android:text="@string/customer_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_name_value"
                    style="@style/TextStyleSub2"
                    android:layout_width="@dimen/xuandq_dip_0"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/xuandq_dip_16"
                    android:gravity="end"
                    android:text="@{viewModel.customer.name}"
                    app:layout_constraintBottom_toBottomOf="@id/tv_name_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/barrier"
                    app:layout_constraintTop_toTopOf="@id/tv_name_title"
                    tools:text="Do xuan" />

                <View
                    android:id="@+id/viewLine2"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/xuandq_dip_1"
                    android:layout_marginHorizontal="@dimen/xuandq_dip_16"
                    android:layout_marginTop="@dimen/xuandq_dip_14"
                    android:background="@color/neutral_200"
                    app:layout_constraintTop_toBottomOf="@id/tv_name_title" />

                <TextView
                    android:id="@+id/tv_phone_title"
                    style="@style/TextStyleBody2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/xuandq_dip_16"
                    android:layout_marginTop="@dimen/xuandq_dip_14"
                    android:text="@string/phone_number"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/viewLine2" />

                <TextView
                    android:id="@+id/tv_phone_value"
                    style="@style/TextStyleSub2"
                    android:layout_width="@dimen/xuandq_dip_0"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/xuandq_dip_16"
                    android:gravity="end"
                    android:text="@{viewModel.customer.phoneNumber}"
                    app:layout_constraintBottom_toBottomOf="@id/tv_phone_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/barrier"
                    app:layout_constraintTop_toTopOf="@id/tv_phone_title"
                    tools:text="0337009194" />

                <View
                    android:id="@+id/viewLine3"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/xuandq_dip_1"
                    android:layout_marginHorizontal="@dimen/xuandq_dip_16"
                    android:layout_marginTop="@dimen/xuandq_dip_14"
                    android:background="@color/neutral_200"
                    app:layout_constraintTop_toBottomOf="@id/tv_phone_title" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/barrier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="right"
                    app:constraint_referenced_ids="tv_name_title,tv_phone_title" />

                <TextView
                    android:id="@+id/tv_convert_hint"
                    android:layout_marginHorizontal="@dimen/xuandq_dip_16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    style="@style/TextStyleSub2"
                    app:layout_constraintTop_toBottomOf="@id/viewLine3"
                    android:layout_marginTop="@dimen/xuandq_dip_16"
                    android:text="@string/hint_convert_money_to_point"/>

                <TextView
                    android:id="@+id/tv_point_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_green"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="@dimen/xuandq_dip_16"
                    app:layout_constraintTop_toBottomOf="@id/tv_convert_hint"
                    android:layout_marginTop="@dimen/xuandq_dip_16"
                    tools:text="= 10.5 point"/>

                <EditText
                    android:id="@+id/edt_amount_of_money"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/xuandq_dip_44"
                    android:hint="Nhập số tiền"
                    android:inputType="numberSigned"
                    android:textAppearance="@style/TextStyleSub1"
                    android:paddingHorizontal="@dimen/xuandq_dip_12"
                    android:layout_marginHorizontal="@dimen/xuandq_dip_16"
                    android:background="@drawable/bg_edt_search_customer"
                    app:layout_constraintTop_toBottomOf="@id/tv_point_value"
                    android:layout_marginTop="@dimen/xuandq_dip_4"
                    tools:text="100.000"/>

                <Button
                    android:id="@+id/btn_accumulate_point"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/accumulate_point"
                    app:layout_constraintTop_toBottomOf="@id/edt_amount_of_money"
                    android:layout_marginHorizontal="@dimen/xuandq_dip_16"
                    android:layout_marginTop="@dimen/xuandq_dip_8"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>